--- a/environment.yml
+++ b/environment.yml
@@ -1,308 +1,32 @@
 ---
 name: flir
 channels:
-  - anaconda
   - conda-forge
+  - nodefaults
+
 dependencies:
-  - aiofiles=22.1.0=pyhd8ed1ab_0
-  - aiosqlite=0.18.0=pyhd8ed1ab_0
-  - anyio=3.6.2=pyhd8ed1ab_0
-  - appdirs=1.4.4=pyh9f0ad1d_0
-  - argon2-cffi=21.3.0=pyhd8ed1ab_0
-  - argon2-cffi-bindings=21.2.0=py39ha55989b_3
-  - asttokens=2.2.1=pyhd8ed1ab_0
-  - attrs=22.2.0=pyh71513ae_0
-  - babel=2.12.1=pyhd8ed1ab_1
-  - backcall=0.2.0=pyh9f0ad1d_0
-  - backports=1.0=pyhd8ed1ab_3
-  - backports.functools_lru_cache=1.6.4=pyhd8ed1ab_0
-  - beautifulsoup4=4.12.0=pyha770c72_0
-  - bleach=6.0.0=pyhd8ed1ab_0
-  - brotli=1.0.9=hcfcfb64_8
-  - brotli-bin=1.0.9=hcfcfb64_8
-  - brotlipy=0.7.0=py39ha55989b_1005
-  - bzip2=1.0.8=h8ffe710_4
-  - ca-certificates=2023.01.10=haa95532_0
-  - cachecontrol=0.12.11=pyhd8ed1ab_1
-  - cachecontrol-with-filecache=0.12.11=pyhd8ed1ab_1
-  - cachy=0.3.0=pyhd8ed1ab_1
-  - cairo=1.16.0=hd694305_1014
-  - certifi=2022.12.7=py39haa95532_0
-  - cffi=1.15.1=py39h68f70e3_3
-  - cfgv=3.3.1=pyhd8ed1ab_0
-  - charset-normalizer=2.1.1=pyhd8ed1ab_0
-  - click=8.1.3=win_pyhd8ed1ab_2
-  - click-default-group=1.2.2=pyhd8ed1ab_1
-  - clikit=0.6.2=pyhd8ed1ab_2
-  - cloudpickle=2.2.1=pyhd8ed1ab_0
-  - colorama=0.4.6=pyhd8ed1ab_0
-  - comm=0.1.3=pyhd8ed1ab_0
-  - conda-lock=1.4.0=pyhd8ed1ab_2
-  - contourpy=1.0.7=py39h1f6ef14_0
-  - coverage=7.2.2=py39ha55989b_0
-  - crashtest=0.4.1=pyhd8ed1ab_0
-  - cryptography=39.0.2=py39hb6bd5e6_0
-  - cycler=0.11.0=pyhd8ed1ab_0
-  - cython=0.29.33=py39h99910a6_0
-  - dcor=0.6=pyhd8ed1ab_0
-  - debugpy=1.6.6=py39h99910a6_0
-  - decorator=5.1.1=pyhd8ed1ab_0
-  - defusedxml=0.7.1=pyhd8ed1ab_0
-  - distlib=0.3.6=pyhd8ed1ab_0
-  - ensureconda=1.4.3=pyhd8ed1ab_0
-  - entrypoints=0.4=pyhd8ed1ab_0
-  - exceptiongroup=1.1.1=pyhd8ed1ab_0
-  - execnet=1.9.0=pyhd8ed1ab_0
-  - executing=1.2.0=pyhd8ed1ab_0
-  - expat=2.5.0=h1537add_0
-  - fancycompleter=0.9.1=py39hcbf5309_1005
-  - fdasrsf=2.3.12=py39h4c1bf12_0
-  - filelock=3.10.4=pyhd8ed1ab_0
-  - findiff=0.8.9=pyhd8ed1ab_1
-  - flit-core=3.8.0=pyhd8ed1ab_0
-  - font-ttf-dejavu-sans-mono=2.37=hab24e00_0
-  - font-ttf-inconsolata=3.000=h77eed37_0
-  - font-ttf-source-code-pro=2.038=h77eed37_0
-  - font-ttf-ubuntu=0.83=hab24e00_0
-  - fontconfig=2.14.2=hbde0cde_0
-  - fonts-conda-ecosystem=1=0
-  - fonts-conda-forge=1=0
-  - fonttools=4.39.2=py39ha55989b_0
-  - freetype=2.12.1=h546665d_1
-  - fribidi=1.0.10=h8d14728_0
-  - getopt-win32=0.1=h8ffe710_0
-  - gettext=0.21.1=h5728263_0
-  - gpy=1.10.0=py39hb1318ea_3
-  - graphite2=1.3.13=1000
-  - graphviz=7.1.0=h51cb2cd_0
-  - gts=0.7.6=h7c369d9_2
-  - harfbuzz=6.0.0=he256f1b_0
-  - html5lib=1.1=pyh9f0ad1d_0
-  - icu=70.1=h0e60522_0
-  - identify=2.5.22=pyhd8ed1ab_0
-  - idna=3.4=pyhd8ed1ab_0
-  - importlib-metadata=6.1.0=pyha770c72_0
-  - importlib-resources=5.12.0=pyhd8ed1ab_0
-  - importlib_metadata=6.1.0=hd8ed1ab_0
-  - importlib_resources=5.12.0=pyhd8ed1ab_0
-  - iniconfig=2.0.0=pyhd8ed1ab_0
-  - intel-openmp=2023.0.0=h57928b3_25922
-  - ipykernel=6.22.0=pyh025b116_0
-  - ipython=8.11.0=pyh08f2357_0
-  - ipython_genutils=0.2.0=py_1
-  - jaraco.classes=3.2.3=pyhd8ed1ab_0
-  - jedi=0.18.2=pyhd8ed1ab_0
-  - jinja2=3.1.2=pyhd8ed1ab_1
-  - joblib=1.2.0=pyhd8ed1ab_0
-  - jpeg=9e=hcfcfb64_3
-  - json5=0.9.5=pyh9f0ad1d_0
-  - jsonschema=4.17.3=pyhd8ed1ab_0
-  - jupyter_client=7.4.9=pyhd8ed1ab_0
-  - jupyter_core=5.3.0=py39hcbf5309_0
-  - jupyter_events=0.6.3=pyhd8ed1ab_0
-  - jupyter_server=2.5.0=pyhd8ed1ab_0
-  - jupyter_server_fileid=0.8.0=pyhd8ed1ab_0
-  - jupyter_server_terminals=0.4.4=pyhd8ed1ab_1
-  - jupyter_server_ydoc=0.8.0=pyhd8ed1ab_0
-  - jupyter_ydoc=0.3.4=pyhd8ed1ab_0
-  - jupyterlab=3.5.0=pyhd8ed1ab_0
-  - jupyterlab_pygments=0.2.2=pyhd8ed1ab_0
-  - jupyterlab_server=2.21.0=pyhd8ed1ab_0
-  - keyring=23.13.1=py39hcbf5309_0
-  - kiwisolver=1.4.4=py39h1f6ef14_1
-  - latex-dependency-scanner=0.1.1=pyhd8ed1ab_1
-  - lazy_loader=0.1=pyhd8ed1ab_1
-  - lcms2=2.15=ha5c8aab_0
-  - lerc=4.0.0=h63175ca_0
-  - libblas=3.9.0=16_win64_mkl
-  - libbrotlicommon=1.0.9=hcfcfb64_8
-  - libbrotlidec=1.0.9=hcfcfb64_8
-  - libbrotlienc=1.0.9=hcfcfb64_8
-  - libcblas=3.9.0=16_win64_mkl
-  - libdeflate=1.17=hcfcfb64_0
-  - libffi=3.4.2=h8ffe710_5
-  - libgd=2.3.3=hf5a96e7_4
-  - libglib=2.74.1=he8f3873_1
-  - libhwloc=2.9.0=h51c2c0f_0
-  - libiconv=1.17=h8ffe710_0
-  - liblapack=3.9.0=16_win64_mkl
-  - libpng=1.6.39=h19919ed_0
-  - libsodium=1.0.18=h8d14728_1
-  - libsqlite=3.40.0=hcfcfb64_0
-  - libtiff=4.5.0=hf8721a0_2
-  - libwebp=1.3.0=hcfcfb64_0
-  - libwebp-base=1.3.0=hcfcfb64_0
-  - libxcb=1.13=hcd874cb_1004
-  - libxml2=2.10.3=hc3477c8_6
-  - libzlib=1.2.13=hcfcfb64_4
-  - llvmlite=0.39.1=py39hd28a505_1
-  - lockfile=0.12.2=py_1
-  - loky=3.3.0=pyhd8ed1ab_0
-  - m2w64-gcc-libgfortran=5.3.0=6
-  - m2w64-gcc-libs=5.3.0=7
-  - m2w64-gcc-libs-core=5.3.0=7
-  - m2w64-gmp=6.1.0=2
-  - m2w64-libwinpthread-git=5.0.0.4634.697f757=2
-  - markdown-it-py=2.2.0=pyhd8ed1ab_0
-  - markupsafe=2.1.2=py39ha55989b_0
-  - matplotlib-base=3.7.1=py39haf65ace_0
-  - matplotlib-inline=0.1.6=pyhd8ed1ab_0
-  - mdurl=0.1.0=pyhd8ed1ab_0
-  - mistune=2.0.5=pyhd8ed1ab_0
-  - mkl=2022.1.0=h6a75c08_874
-  - more-itertools=9.1.0=pyhd8ed1ab_0
-  - mpmath=1.3.0=pyhd8ed1ab_0
-  - msgpack-python=1.0.5=py39h1f6ef14_0
-  - msys2-conda-epoch=20160418=1
-  - multimethod=1.9.1=pyhd8ed1ab_0
-  - munkres=1.1.4=pyh9f0ad1d_0
-  - nbclassic=0.5.3=pyhb4ecaf3_3
-  - nbclient=0.7.2=pyhd8ed1ab_0
-  - nbconvert=7.2.9=pyhd8ed1ab_0
-  - nbconvert-core=7.2.9=pyhd8ed1ab_0
-  - nbconvert-pandoc=7.2.9=pyhd8ed1ab_0
-  - nbformat=5.8.0=pyhd8ed1ab_0
-  - nest-asyncio=1.5.6=pyhd8ed1ab_0
-  - networkx=3.0=pyhd8ed1ab_0
-  - nodeenv=1.7.0=pyhd8ed1ab_0
-  - notebook=6.5.3=pyha770c72_0
-  - notebook-shim=0.2.2=pyhd8ed1ab_0
-  - numba=0.56.4=py39h99ae161_0
-  - numpy=1.21.6=py39h6331f09_0
-  - openjpeg=2.5.0=ha2aaf27_2
-  - openssl=3.1.0=hcfcfb64_0
-  - packaging=23.0=pyhd8ed1ab_0
-  - pandas=1.5.3=py39h2ba5b7c_0
-  - pandoc=3.1.1=h57928b3_0
-  - pandocfilters=1.5.0=pyhd8ed1ab_0
-  - pango=1.50.14=hdffb7b3_0
-  - paramz=0.9.5=py_0
-  - parso=0.8.3=pyhd8ed1ab_0
-  - pastel=0.2.1=pyhd8ed1ab_0
-  - patsy=0.5.3=pyhd8ed1ab_0
-  - pcre2=10.40=h17e33f8_0
-  - pdbpp=0.10.3=pyhd8ed1ab_0
-  - pickleshare=0.7.5=py_1003
-  - pillow=9.4.0=py39hcebd2be_1
-  - pip=23.0.1=pyhd8ed1ab_0
-  - pixman=0.40.0=h8ffe710_0
-  - pkginfo=1.9.6=pyhd8ed1ab_0
-  - pkgutil-resolve-name=1.3.10=pyhd8ed1ab_0
-  - platformdirs=3.1.1=pyhd8ed1ab_0
-  - plotly=5.13.1=pyhd8ed1ab_0
-  - pluggy=1.0.0=pyhd8ed1ab_5
-  - pony=0.7.16=pyhd8ed1ab_0
-  - pooch=1.7.0=pyha770c72_3
-  - pre-commit=3.2.0=pyha770c72_0
-  - prometheus_client=0.16.0=pyhd8ed1ab_0
-  - prompt-toolkit=3.0.38=pyha770c72_0
-  - prompt_toolkit=3.0.38=hd8ed1ab_0
-  - psutil=5.9.4=py39ha55989b_0
-  - pthread-stubs=0.4=hcd874cb_1001
-  - pthreads-win32=2.9.1=hfa6e2cd_3
-  - pure_eval=0.2.2=pyhd8ed1ab_0
-  - pybaum=0.1.3=pyhd8ed1ab_0
-  - pycparser=2.21=pyhd8ed1ab_0
-  - pydantic=1.10.7=py39ha55989b_0
-  - pygments=2.14.0=pyhd8ed1ab_0
-  - pylev=1.4.0=pyhd8ed1ab_0
-  - pyopenssl=23.1.0=pyhd8ed1ab_0
-  - pyparsing=3.0.9=pyhd8ed1ab_0
-  - pyreadline=2.1=py39hcbf5309_1007
-  - pyrsistent=0.19.3=py39ha55989b_0
-  - pysocks=1.7.1=pyh0701188_6
-  - pytask=0.3.1=pyhd8ed1ab_0
-  - pytask-latex=0.3.0=pyhd8ed1ab_0
-  - pytask-parallel=0.3.0=pyhd8ed1ab_0
-  - pytest=7.2.2=pyhd8ed1ab_0
-  - pytest-cov=4.0.0=pyhd8ed1ab_0
-  - pytest-xdist=3.2.1=pyhd8ed1ab_0
-  - python=3.9.16=h4de0772_0_cpython
-  - python-dateutil=2.8.2=pyhd8ed1ab_0
-  - python-fastjsonschema=2.16.3=pyhd8ed1ab_0
-  - python-graphviz=0.20.1=pyh22cad53_0
-  - python-json-logger=2.0.7=pyhd8ed1ab_0
-  - python_abi=3.9=3_cp39
-  - pytz=2023.2=pyhd8ed1ab_0
-  - pywin32=304=py39h99910a6_2
-  - pywin32-ctypes=0.2.0=py39hcbf5309_1006
-  - pywinpty=2.0.10=py39h99910a6_0
-  - pyyaml=6.0=py39ha55989b_5
-  - pyzmq=25.0.2=py39hea35a22_0
-  - rdata=0.8=pyhd8ed1ab_0
-  - requests=2.28.2=pyhd8ed1ab_0
-  - rfc3339-validator=0.1.4=pyhd8ed1ab_0
-  - rfc3986-validator=0.1.1=pyh9f0ad1d_0
-  - rich=13.3.2=pyhd8ed1ab_0
-  - ruamel.yaml=0.17.21=py39ha55989b_3
-  - ruamel.yaml.clib=0.2.7=py39ha55989b_1
-  - scikit-datasets=0.2.2=pyhd8ed1ab_0
-  - scikit-fda=0.8.1=pyhd8ed1ab_0
-  - scikit-learn=1.2.2=py39hb6325b5_1
-  - scipy=1.10.1=py39hfbf2dce_0
-  - seaborn=0.12.2=py39haa95532_0
-  - send2trash=1.8.0=pyhd8ed1ab_0
-  - setuptools=67.6.0=pyhd8ed1ab_0
-  - setuptools-scm=7.1.0=pyhd8ed1ab_0
-  - setuptools_scm=7.1.0=hd8ed1ab_0
-  - six=1.16.0=pyh6c4a22f_0
-  - sniffio=1.3.0=pyhd8ed1ab_0
-  - soupsieve=2.3.2.post1=pyhd8ed1ab_0
-  - spyder-kernels=2.4.2=win_pyhd8ed1ab_0
-  - stack_data=0.6.2=pyhd8ed1ab_0
-  - statsmodels=0.13.5=py39hc266a54_2
-  - sympy=1.11.1=pyh04b8f61_3
-  - tbb=2021.8.0=h91493d7_0
-  - tenacity=8.2.2=pyhd8ed1ab_0
-  - terminado=0.17.0=pyh08f2357_0
-  - threadpoolctl=3.1.0=pyh8a188c0_0
-  - tinycss2=1.2.1=pyhd8ed1ab_0
-  - tk=8.6.12=h8ffe710_0
-  - toml=0.10.2=pyhd8ed1ab_0
-  - tomli=2.0.1=pyhd8ed1ab_0
-  - tomlkit=0.11.6=pyha770c72_0
-  - toolz=0.12.0=pyhd8ed1ab_0
-  - tornado=6.2=py39ha55989b_1
-  - tqdm=4.65.0=pyhd8ed1ab_1
-  - traitlets=5.9.0=pyhd8ed1ab_0
-  - typing=3.10.0.0=pyhd8ed1ab_0
-  - typing-extensions=4.5.0=hd8ed1ab_0
-  - typing_extensions=4.5.0=pyha770c72_0
-  - tzdata=2023b=h71feb2d_0
-  - ucrt=10.0.22621.0=h57928b3_0
-  - ukkonen=1.0.1=py39h1f6ef14_3
-  - unicodedata2=15.0.0=py39ha55989b_0
-  - urllib3=1.26.15=pyhd8ed1ab_0
-  - vc=14.3=hb6edc58_10
-  - virtualenv=20.21.0=pyhd8ed1ab_0
-  - vs2015_runtime=14.34.31931=h4c5c07a_10
-  - wcwidth=0.2.6=pyhd8ed1ab_0
-  - webencodings=0.5.1=py_1
-  - websocket-client=1.5.1=pyhd8ed1ab_0
-  - wheel=0.40.0=pyhd8ed1ab_0
-  - win_inet_pton=1.1.0=pyhd8ed1ab_6
-  - winpty=0.4.3=4
-  - wmctrl=0.4=pyhd8ed1ab_0
-  - xarray=2023.3.0=pyhd8ed1ab_0
-  - xorg-kbproto=1.0.7=hcd874cb_1002
-  - xorg-libice=1.0.10=hcd874cb_0
-  - xorg-libsm=1.2.3=hcd874cb_1000
-  - xorg-libx11=1.8.4=hcd874cb_0
-  - xorg-libxau=1.0.9=hcd874cb_0
-  - xorg-libxdmcp=1.1.3=hcd874cb_0
-  - xorg-libxext=1.3.4=hcd874cb_2
-  - xorg-libxpm=3.5.13=hcd874cb_0
-  - xorg-libxt=1.2.1=hcd874cb_2
-  - xorg-xextproto=7.3.0=hcd874cb_1003
-  - xorg-xproto=7.0.31=hcd874cb_1007
-  - xz=5.2.6=h8d14728_0
-  - y-py=0.6.0=py39hf21820d_0
-  - yaml=0.2.5=h8ffe710_2
-  - ypy-websocket=0.8.4=pyhd8ed1ab_0
-  - zeromq=4.3.4=h0e60522_1
-  - zipp=3.15.0=pyhd8ed1ab_0
-  - zlib=1.2.13=hcfcfb64_4
-  - zstd=1.5.2=h12be248_6
+  - conda-lock
+  - ipykernel
+  - jupyterlab
+  - pandas
+  - pdbpp
+  - pip >=21.1
+  - plotly>=5.13.0
+  - pre-commit
+  - pytask-latex
+  - pytask-parallel
+  - pytask>=0.2
+  - pytest
+  - pytest-cov
+  - pytest-xdist
+  - python-graphviz
+  - python=3.9.16
+  - pyyaml
+  - seaborn
+  - setuptools_scm
+  - scikit-fda
+  - statsmodels
+  - toml
   - pip:
-      - kaleido==0.2.1
       - -e .
+      - kaleido
